--- a/android/src/main/res/values/styles.xml
+++ b/android/src/main/res/values/styles.xml
@@ -1,11 +1,16 @@
 <resources>
+    <style name="SplashScreen_BaseTheme">
+        @style/SplashScreen_BaseTheme
+    </style>
+    
     <style name="SplashScreen_SplashAnimation">
         <item name="android:windowExitAnimation">@android:anim/fade_out</item>
     </style>
 
-    <style name="SplashScreen_SplashTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="SplashScreen_SplashTheme" parent="SplashScreen_BaseTheme">
         <item name="android:windowAnimationStyle">@style/SplashScreen_SplashAnimation</item>
     </style>
+    
     <style name="SplashScreen_Fullscreen" parent="SplashScreen_SplashTheme">
         <item name="android:windowFullscreen">true</item>
     </style>
